# vala

./: meson.build
ccode/: meson.build
codegen/: valaccodebasemodule.vala  valaccodemethodmodule.vala  valagdbusclientmodule.vala  valagdbusservermodule.vala
compiler/: meson.build
vala/: meson.build  valagirparser.vala  valamethodcall.vala  valaparser.vala
vapi/: gio-2.0.vapi
vapigen/: meson.build
